opam-version: "2.0"
name: "crc"
synopsis: "CRC implementation supporting strings and cstructs"
license: "ISC"
maintainer: "xapi-project maintainers"
authors: [ "David Scott" "John Else" ]
homepage: "https://github.com/xapi-project/ocaml-crc"
bug-reports: "https://github.com/xapi-project/ocaml-crc/issues"
depends: [
  "dune" {>= "1.4"}
  "ocaml" {>= "4.00.1"}
  "cstruct" {>= "1.0.1"}
  "ounit2" {with-test}
  "odoc" {with-doc}
  "ppx_deriving_rpc"
  "ppx_sexp_conv" {>= "v0.11.0"}
]
build: [[ "dune" "build" "-p" name ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
dev-repo: "git+https://github.com/xapi-project/ocaml-crc"
